# alpha

./: Cargo.toml  README.md
examples/sandbox/scripts/: package-lock.json  package.json
notes/: 001_starting_out.md  002_rendering_a_rectangle_in_editor_and_game.md
resources/shaders/: rect.wgsl
src/: components.rs  editor.rs  engine.rs  error.rs  game.rs  lib.rs  logging.rs  platform.rs  renderer.rs
src/editor/: gui.rs
src/renderer/: camera.rs  rect.rs
